[package]
name = "template-rust-app"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "v0.3.1", git = "https://github.com/majksa-dev/rust-essentials" }
chrono = { version = "0.4.20", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.7"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
rand = "0.8"
slab = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4.2"
